k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: clinica
  labels:
    app: clinica-medica
