k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: clinica-ingress
  namespace: clinica
spec:
  ingressClassName: nginx
  rules:
    - host: administrativo.clinica.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: administrativo
                port:
                  number: 8081
    - host: agendamento.clinica.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: agendamento
                port:
                  number: 8082
    - host: atendimento.clinica.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: atendimento
                port:
                  number: 8083
